# coldpack

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  INITIAL.md  PROJECT_STATUS.md  README.md  README.zh-tw.md  pyproject.toml
.github/: SECURITY.md  dependabot.yml  labeler.yml  pull_request_template.md  release-drafter.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: auto-label.yml  build.yml  ci.yml  codeql.yml  release-drafter.yml
PRPs/: coldpack-initial-implementation.md
docs/: CLI_REFERENCE.md  EXAMPLES.md  GITHUB_SETUP.md  INSTALLATION.md
scripts/: README.md  ci-local.sh  quick-check.sh
src/coldpack/: __init__.py  cli.py
src/coldpack/config/: constants.py  settings.py
src/coldpack/core/: archiver.py  extractor.py  repairer.py  verifier.py
src/coldpack/utils/: compression.py  console.py  filesystem.py  hashing.py  par2.py  progress.py  sevenzip.py  temp_manager.py  windows_compat.py
tests/: __init__.py  test_archiver.py  test_cli.py  test_config.py  test_extractor.py  test_file_filtering.py  test_integration.py  test_lister.py  test_memory_limit_integration.py  test_repairer.py  test_safe_console.py  test_sevenzip.py  test_utils.py  test_verifier.py  test_windows_filename_handling.py
