[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/coldpack"]

[project]
name = "coldpack"
dynamic = ["version"]
description = "Professional 7z Cold Storage Solution with Revolutionary Architecture - Advanced CLI tool for creating standardized 7z archives with comprehensive verification, PAR2 recovery, and intelligent cross-platform compatibility."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "coldpack contributors"},
]
maintainers = [
    {name = "coldpack team"},
]
keywords = [
    "7z", "archive", "compression", "cold-storage", "backup", "par2",
    "verification", "recovery", "cross-platform", "blake3", "sha256",
    "enterprise", "cli", "professional", "integrity"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Archiving :: Compression",
    "Topic :: System :: Archiving :: Backup",
    "Topic :: System :: Recovery Tools",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
    "Environment :: Console",
    "Natural Language :: English",
]
dependencies = [
    "py7zz==1.0.1",
    "blake3>=1.0.5",
    "typer>=0.16.0",
    "rich>=14.0.0",
    "pydantic>=2.0.0",
    "loguru>=0.7.0",
    "par2cmdline-turbo>=1.3.0",
    "toml>=0.10.0",
    "tomli>=1.2.0 ; python_full_version < '3.11'",
]

[project.optional-dependencies]
dev = []

[project.scripts]
cpack = "coldpack.cli:cli_main"

[project.urls]
"Homepage" = "https://github.com/rxchi1d/coldpack"
"Repository" = "https://github.com/rxchi1d/coldpack"
"Issues" = "https://github.com/rxchi1d/coldpack/issues"
"Discussions" = "https://github.com/rxchi1d/coldpack/discussions"
"Documentation" = "https://github.com/rxchi1d/coldpack#readme"
"Changelog" = "https://github.com/rxchi1d/coldpack/blob/main/CHANGELOG.md"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501", "B008"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*.py" = ["B011"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.9"
show_error_codes = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
explicit_package_bases = true
namespace_packages = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = "tomli.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tomllib.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers --cov=src/coldpack --cov-report=html --cov-report=term-missing"
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]

[dependency-groups]
dev = [
    "build>=1.2.2.post1",
    "mypy>=1.14.1",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.12.3",
    "twine>=6.1.0",
    "types-toml>=0.10.8.20240310",
    "pre-commit>=4.2.0",
    "hatchling>=1.27.0",
    "hatch-vcs>=0.5.0",
    "bandit[toml]>=1.8.6",
    "safety>=3.6.0",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
git_describe_command = "git describe --tags --match='v*'"
local_scheme = "no-local-version"
